add gin log
