# docs/swagger.yaml
@@ -42,6 +42,10 @@ paths:
           description: Unauthorized
           schema:
             $ref: '#/definitions/app.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/app.Response'
         "500":
           description: Internal Server Error
           schema:
@@ -413,8 +417,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/app.Response'
-        "400":
-          description: Bad Request
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/app.Response'
         "500":
